@@ -1,3 +1,7 @@
+2012-08-17 Borut Razem <borut.razem AT gmail.com>
+	* src/SDCCasm.c, SDCCsymt.h: fixed failing regression tests if
+	  sdcc compiled on ARM architecture where default "char" is "unsigned char"
+
 2012-08-13 Borut Razem <borut.razem AT gmail.com>
 	* support/regression/tests/bitvars.c,
 	  support/regression/tests/funsigned-char.c:
